# city-map-guessr

./: .pre-commit-config.yaml  README.md
.github/workflows/: code_quality.yml  on_pull_request.yml
backend/: pyproject.toml  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 33168826b09d_initialize_tables.py  7c5ebbef717c_initialize_tables.py  82726fd13944_initialize_tables.py  9a84d4ee4392_initialize_tables.py  ae7c473c9ef9_initialize_tables.py  bd9a6f2ae410_initialize_tables.py
backend/api/: database.py  enums.py  main.py  settings.py
backend/api/crud/: core.py  games.py
backend/api/domain/: core.py  games.py
backend/api/models/: game.py  games.py
backend/api/routers/: games.py  health.py
backend/api/schemas/: core.py  games.py
backend/api/services/: games.py
backend/api/tests/: conftest.py
backend/api/tests/test_crud/: test_core.py  test_games.py
backend/api/tests/test_routers/: conftest.py  test_games.py  test_health.py
backend/api/tests/test_services/: test_games.py
backend/dev/: seed_data.py
backend/dev/data/: cities.json  games.json
e2e/pages/: HomePage.ts
e2e/tests/: home-page.spec.ts
frontend/: package.json
frontend/src/routes/: index.tsx
