[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.12"}
sqlalchemy = "^2.0.43"
alembic = "^1.16.5"
asyncpg = "^0.30.0"
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
greenlet = "^3.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
ruff = "^0.14.7"


[tool.black]
line-length = 120
